Working on pages for week 2

--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -1,1 +1,11 @@
-<nav></nav>
+<nav>
+    <div>
+        <span class="nav-title">NodeBucket</span>
+    </div>
+    <ul>
+        <li routerLink="/">Home</li>
+        <li routerLink="/about">About</li>
+        <li routerLink="/contact">Contact</li>
+        <li routerLink="/login">Log-In</li>
+    </ul>
+</nav>
