--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,5 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col">
-      <h1>Home Component Works! <span class="material-icons">thumb_up</span></h1>
-    </div>
-  </div>
-
-  <a routerLink="/security">Test Security Module</a>
+<div class="home-container">
+  <h1 class="home-title">Welcome to Node Bucket</h1>
+  <h2 class="home-subtitle">Your favorite task manager app</h2>
+  <button class="home-login">Log-In</button>
 </div>
-
-
