Log-in page built; just need to add functionality

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="login-container">
+    <h1 class="login-title">Account Log-In</h1>
+    <h2 class="login-subtitle">Please type your employee ID to login</h2>
+    <input placeholder="Ex: 1007">
+    <button class="login-login">Log-In</button>
+  </div>
+  
