loggin in works; need to add CORS

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
   <h1 class="home-title">Welcome to Node Bucket</h1>
   <h2 class="home-subtitle">Your favorite task manager app</h2>
-  <button class="home-login">Log-In</button>
+  <button routerLink="/login" class="home-login">Log-In</button>
 </div>
