--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,6 +6,13 @@
     padding-top: 5rem; 
 }
 
+form {
+    display:flex; 
+    flex-direction: column;
+    gap: 1rem; 
+    text-align: center;
+}
+
 .home-title {
     font-weight: bold; 
     font-size: 2rem; 
@@ -24,4 +31,11 @@ button {
     padding: 1rem 4rem;
     border: none; 
     border-radius: 15px; 
+    background: #5d5d5d; 
+    color: #fff; 
+    transition: 0.2s; 
+}
+
+button:hover {
+    background: #946b2d;
 }
