working on tasks component

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -9,6 +9,7 @@
                     <div>
                         <div class="">Name: {{ task.name }}</div>
                         <div class="">Description: {{ task.description}}</div>
+                        <div class="">Status: {{ task.status }}</div>
                     </div>
                 </div>
             </div>
