tasks work; working on contact

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,21 @@
-<p>contact works!</p>
+<div class="contact-container">
+    <h1 class="Contact Title">Contact Us</h1>
+    <h3>Looking to get ahold of us? Give us a call or shoot us an email! We'd love to hear from you!</h3>
+
+    <div class="contact-info-container">
+        <div class="contact-img">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3004.264657680997!2d-95.92073292439115!3d41.15057601065139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8793886a86ca807f%3A0x838e857240d175eb!2sBellevue%20University!5e0!3m2!1sen!2sus!4v1698807157121!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="contact-info">
+            <div class="info">
+                <h4>Address</h4>
+                <p>1000 Galvin Rd S, Bellevue, NE 68005</p>
+            </div>
+            <div class="info">
+                <h4>Phone</h4>
+                <p>1.402.293.2000</p>
+                <p>1.800.756.7920</p>
+            </div>
+        </div>
+    </div>
+</div>
