--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -6,6 +6,7 @@
         <li routerLink="/">Home</li>
         <li routerLink="/about">About</li>
         <li routerLink="/contact">Contact</li>
-        <li routerLink="/login">Log-In</li>
+        <li routerLink="/tasks">Tasks</li>
+        <li routerLink="/login">Login</li>
     </ul>
 </nav>
