--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,8 +4,10 @@
     align-items: center;
     flex-direction: column;
     gap: 3rem; 
-    margin-top: 2rem;
+
     padding: 3rem 3rem; 
+    background: #223164;
+    color: #fff;
 }
 
 .contact-info-container {
