almost done week 3

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -4,6 +4,9 @@
     align-items: center;
     gap: 2rem; 
     padding-top: 5rem; 
+    background: #223164;
+    color: #fff; 
+    height: 90vh; 
 }
 
 form {
