--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div class="container">
+    <h1 class="about-title">About Us</h1>
+    <h2 class="about-subtitle">Learn more about our Revolutionary(ish) Task Management App!</h2>
+    <div class="horizontal-break"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur reprehenderit voluptas, et nisi, expedita eligendi quas doloribus officia quisquam error odit omnis nesciunt maiores a? Quos fugiat atque impedit beatae.</p>
+</div>
