--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="about-container">
     <h1 class="about-title">About Us</h1>
     <h2 class="about-subtitle">Learn more about our Revolutionary(ish) Task Management App!</h2>
     <div class="horizontal-break"></div>
