--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main-container">
     <h1>Welcome {{ name }}</h1>
     <h2>Your tasks are below</h2>
     <div class="tasks-container">
