trying to get drag to work

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,16 +1,26 @@
 <div class="kanban-board">
-    <div class="column" id="todo">
+    <div class="column" id="todo" (dragOver)="onDragOver($event)" (drop)="onDrop($event, 'To Do')">
         <h3>To-Do</h3>
-        <div class="task">Task 1</div>
-        <div class="task">Task 2</div>
+        <div class="task" draggable="true" *ngFor="let item of filterTasks('To Do')" (onDragStart)="onDragStart(item)">
+          <h4>{{ item.name }}</h4>
+          <p>{{ item.description }}</p>
+          <p>{{ item.importance}}</p>
+        </div>
     </div>
-    <div class="column" id="in-progress">
+    <div class="column" id="in-progress" (dragOver)="onDragOver($event)" (drop)="onDrop($event, 'To Do')">
         <h3>In Progress</h3>
-        <div class="task">Task 3</div>
-        <div class="task">Task 4</div>
+        <div class="task" draggable="true" *ngFor="let item of filterTasks('In Progress')" (dragStart)="onDragStart(item)">
+          <h4>{{ item.name }}</h4>
+          <p>{{ item.description }}</p>
+          <p>{{ item.importance}}</p>
+        </div>
     </div>
-    <div class="column" id="done">
+    <div class="column" id="done" (dragOver)="onDragOver($event)" (drop)="onDrop($event, 'To Do')">
         <h3>Done</h3>
-        <div class="task">Task 5</div>
+        <div class="task" draggable="true" *ngFor="let item of filterTasks('Finished')" (dragStart)="onDragStart(item)">
+          <h4>{{ item.name }}</h4>
+          <p>{{ item.description }}</p>
+          <p>{{ item.importance}}</p>
+        </div>
     </div>
 </div>
