--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -5,6 +5,7 @@
           <h4>{{ item.name }}</h4>
           <p>{{ item.description }}</p>
           <p>{{ item.importance}}</p>
+          <button class="task-button" (click)="deleteTask(item.taskId)">Delete</button>
         </div>
     </div>
     <div class="column" id="in-progress" (dragover)="onDragOver($event)" (drop)="onDrop($event, 'In Progress')">
@@ -13,6 +14,7 @@
           <h4>{{ item.name }}</h4>
           <p>{{ item.description }}</p>
           <p>{{ item.importance}}</p>
+          <button class="task-button" (click)="deleteTask(item.taskId)">Delete</button>
         </div>
     </div>
     <div class="column" id="done" (dragover)="onDragOver($event)" (drop)="onDrop($event, 'Finished')">
@@ -21,6 +23,7 @@
           <h4>{{ item.name }}</h4>
           <p>{{ item.description }}</p>
           <p>{{ item.importance}}</p>
+          <button class="task-button" (click)="deleteTask(item.taskId)">Delete</button>
         </div>
     </div>
 </div>
