--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -23,3 +23,16 @@
     padding: 10px;
     margin: 10px 0;
 }
+
+.task-button {
+  background: #223164;
+  color: white;
+  border: none;
+  padding: 0.6rem 0.6rem;
+  border-radius: 10px;
+  transition: 0.2s background;
+}
+
+.task-button:hover {
+  background: red;
+}
