--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -28,18 +28,19 @@
     </div>
 
 </div>
-<button class="add-task-button">Add New Task</button>
-<div class="create-task-modal"> 
+<button class="add-task-button" (click)="showCreateTaskModal()">Add New Task</button>
+<form [formGroup]="newTaskForm" class="create-task-modal hidden"> 
+  <div class="close-modal" (click)="hideCreateTaskModal()">X</div>
   <h2>Add New Task</h2>
   <label>Name:</label>
-  <input type="text" id="name">
+  <input type="text" required formControlName="name">
   <label>Description:</label>
-  <input type="text">
+  <input type="text" required formControlName="description">
   <label>Status:</label>
-  <input type="text">
+  <input type="text" required formControlName="status">
   <label>Importance:</label>
-  <input type="text">
+  <input type="text" required formControlName="importance">
   <label>TaskId:</label>
-  <input type="text">
+  <input type="text" required formControlName="taskId">
   <button style="margin-top: 1rem;" class="task-button"(click)="addNewTask()">Create Task</button>
-</div>
+</form>
