fixed up about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,5 +2,22 @@
     <h1 class="about-title">About Us</h1>
     <h2 class="about-subtitle">Learn more about our Revolutionary(ish) Task Management App!</h2>
     <div class="horizontal-break"></div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur reprehenderit voluptas, et nisi, expedita eligendi quas doloribus officia quisquam error odit omnis nesciunt maiores a? Quos fugiat atque impedit beatae.</p>
+    <div class="about-info-container">
+      <div class="about-divs-container">
+        <div class="about-info">
+          <h3>Who We Are</h3>
+          <p>We are Nodebucket, a group of developers with a passion for creating amazing technology that our customers love. Our Mission: empower our customers to achieve their goals and to keep growing. At Nodebucket, we understand that modern day life can be hectic, which is why we want to provide a top notch task manager that works for you.</p>
+        </div>
+        <div class="about-info">
+          <h3>Our Story</h3>
+          <p>Nodebucket began as a small task manager app, which was first featured in the Google Playstore. While Nodebucket was useful, it wasn't at first successful. We were but a drop in an ocean of other task management apps. Upon much research and investigation, we created a product that really set us apart from the competition. Nodebucket is the product of much labor and love that keeps our customers happy. </p>
+        </div>
+      </div>
+      <div class="about-image-container">
+        <img width="500" height="333" src="../../assets/about.jpg" alt="Developers at a computer">
+      </div>
+
+    </div>
+
+
 </div>
