--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,15 +1,26 @@
 .about-container {
-    display: flex; 
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 3rem; 
-    padding: 3rem 3rem; 
+    gap: 3rem;
+    padding: 3rem 3rem;
     background: #223164;
     color: #fff;
-    height: 90vh; 
+    height: 90vh;
 }
 
 p {
-    width: 50%; 
+    width: 50%;
+}
+
+.about-info h3{
+  font-weight: bold;
+}
+
+.about-info-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
 }
